Opened 16 years ago
Closed 16 years ago
#3835 closed bug (fixed)
when booting VMCache::InsertPage(): there's already page 0x8203a920 with cache offset 146 in cache 0x8101bd20; inserting page 0x8203bc58
Reported by: | korli | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev30468 on VMWare on boot:
PANIC: VMCache::InsertPage(): there's already page 0x8203a920 with cache offset 146 in cache 0x8101bd20; inserting page 0x8203bc58 Welcome to Kernel Debugging Land... Thread 37 "sh" running on CPU 0 kdebug> bt stack trace for thread 37 "sh" kernel stack: 0x80208000 to 0x8020c000 user stack: 0x7efef000 to 0x7ffef000 frame caller <image>:function + offset 0 8020ba54 (+ 48) 80062345 <kernel_x86>:invoke_debugger_command + 0x00f5 1 8020ba84 (+ 64) 80062135 <kernel_x86> invoke_pipe_segment(debugger_command_pipe*: ESC[34m0x8012f380ESC[0m, int32: ESC[34m0ESC[0m, ESC[34m0x0ESC[0m ESC[31m"<NULL>"ESC[0m) + 0x0079 2 8020bac4 (+ 64) 800624bc <kernel_x86>:invoke_debugger_command_pipe + 0x009c 3 8020bb04 (+ 48) 80063a6c <kernel_x86> ExpressionParser<ESC[32m0x8020bbb8ESC[0m>::_ParseCommandPipe(ESC[34m0x8020bbb4ESC[0m) + 0x0234 4 8020bb34 (+ 64) 80062ea6 <kernel_x86> ExpressionParser<ESC[32m0x8020bbb8ESC[0m>::EvaluateCommand(ESC[34m0x8011fc00ESC[0m ESC[36m"bt"ESC[0m, ESC[34m0x8020bbb4ESC[0m) + 0x02ba 5 8020bb74 (+ 224) 80064e94 <kernel_x86>:evaluate_debug_command + 0x0088 6 8020bc54 (+ 64) 800601be <kernel_x86> kernel_debugger_loop() + 0x01ae 7 8020bc94 (+ 32) 800610c5 <kernel_x86>:kernel_debugger + 0x004d 8 8020bcb4 (+ 192) 8006106d <kernel_x86>:panic + 0x0029 9 8020bd74 (+ 112) 800c9551 <kernel_x86> VMCache<ESC[32m0x8101bd20ESC[0m>::InsertPage(vm_page*: ESC[34m0x8203bc58ESC[0m, int64: ESC[34m598016ESC[0m) + 0x01e9 10 8020bde4 (+ 80) 800331b1 <kernel_x86> PrecacheIO<ESC[32m0x81009eb0ESC[0m>::Start(ESC[34m0x92000ESC[0m, ESC[34m0x0ESC[0m, ESC[34m0x800c90aaESC[0m, ESC[34m0x8020bec4ESC[0m, ESC[34m0x0ESC[0m, ESC[34m0x7000ESC[0m) + 0x0079 11 8020be34 (+ 80) 80034a0c <kernel_x86>:cache_prefetch_vnode + 0x0168 12 8020be84 (+ 80) 800c183c <kernel_x86> _vm_map_file(int32: ESC[34m37ESC[0m, ESC[34m0x8020bf24ESC[0m ESC[36m"bash_seg1rw"ESC[0m, ESC[34m0x8020bf20ESC[0m, uint32: ESC[34m0x1ESC[0m (ESC[34m1ESC[0m), uint32: ESC[34m0x7000ESC[0m (ESC[34m28672ESC[0m), uint32: ESC[34m0x33ESC[0m (ESC[34m51ESC[0m), uint32: ESC[34m0x1ESC[0m (ESC[34m1ESC[0m), int32: ESC[34m2ESC[0m, int64: ESC[34m573440ESC[0m, ESC[34mfalseESC[0m) + 0x0304 13 8020bed4 (+ 112) 800c7c1f <kernel_x86>:_user_map_file + 0x00c3 14 8020bf44 (+ 100) 800d8c62 <kernel_x86>:handle_syscall + 0x00af user iframe at 0x8020bfa8 (end = 0x8020c000) eax 0xb8 ebx 0x115374 ecx 0x7ffeda60 edx 0xffff0104 esi 0x24 edi 0x116004 ebp 0x7ffedaec esp 0x8020bfdc eip 0xffff0104 eflags 0x246 user esp 0x7ffeda60 vector: 0x63, error code: 0x0 15 8020bfa8 (+ 0) ffff0104 <commpage>:commpage_syscall + 0x0004 16 7ffedaec (+5248) 00102f9d </boot/system/runtime_loader@0x00100000>:unknown + 0x2f9d 17 7ffeef6c (+ 64) 00103a07 </boot/system/runtime_loader@0x00100000>:unknown + 0x3a07 18 7ffeefac (+ 48) 001008de </boot/system/runtime_loader@0x00100000>:unknown + 0x08de 19 7ffeefdc (+ 0) 7ffeefec 9071:sh_main_stack@0x7efef000 + 0xffffec
Attachments (1)
Change History (7)
comment:1 by , 16 years ago
comment:2 by , 16 years ago
The stack trace is in the pre-fetching code, so I am pretty sure this change is responsible.
comment:3 by , 16 years ago
Milestone: | R1/alpha1 → R1 |
---|---|
Priority: | blocker → normal |
Status: | new → assigned |
Since the bug is currently worked-around, I changed its milestone and priority.
follow-up: 5 comment:4 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed and re-enabled in hrev30515.
comment:5 by , 16 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
unfortunately on my laptop with hrev30515 going in KDL. (See attachment)
by , 16 years ago
comment:6 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
While it's still in the precache code, this is a completely different bug. Please open a new ticket instead before reopening old ones.
Note:
See TracTickets
for help on using tickets.
It doesn't happen without the change at hrev30465.